# src/models/errors/index.ts
@@ -2,7 +2,14 @@
  * Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
  */
 
+export * from "./badrequest.js";
+export * from "./forbidden.js";
+export * from "./internalservererror.js";
 export * from "./kdbaitablecreate.js";
 export * from "./kdbaitabledelete.js";
+export * from "./notfound.js";
 export * from "./sdkerror.js";
 export * from "./sdkvalidationerror.js";
+export * from "./serviceunavailable.js";
+export * from "./toomanyrequests.js";
+export * from "./unauthorized.js";
